Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
eazyBI
Give feedback to Atlassian
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Acknowledged notifications
Core Server
SERVER-1027
geo maxDistance didn't cut search, just results
Undo Transition
Closed
Export
null
XML
Word
Printable
JSON
Details
Type:
Bug
Resolution:
Done
Priority:
Major - P3
Fix Version/s:
1.4.2
,
1.5.1
Affects Version/s:
None
Component/s:
Performance
,
Querying
Labels:
None
Field Tab
Aha! Info
CAR Domain/s:
None
Aha! Reference:
None
Tracking Level:
None
Risk Status:
None
Exec Notes:
None
Goal Name(s):
None
Goal Link:
None
Attachments
Activity
People
Assignee:
Eliot Horowitz (Inactive)
Reporter:
Eliot Horowitz (Inactive)
Participants:
auto
,
Eliot Horowitz
Votes
:
0
Vote for this issue
Watchers:
0
Start watching this issue
Dates
Created:
Apr 16 2010 11:51:05 AM UTC
Updated:
Jul 12 2016 12:29:54 AM UTC
Resolved:
Apr 16 2010 11:53:23 AM UTC
PagerDuty