slight tweak to maxDistance SERVER-1027